mysql-kuber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
spec:
   replicas: 1
   selector:
      matchLabels:     
          app: mysql
   template:
       metadata:
           labels:
               app: mysql
       spec:
           containers: 
               - image: mysql:8.0
                 name: mysql
---
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    type: ClusterIP
    selector:
        app: mysql
    ports:
        - port: 3306
