nextcloud_kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  labels:
    name: nextcloud
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    name: nextcloud

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
     name: nextcloud
spec:
  selector:
    matchLabels:
       name: nextcloud
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
         name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud
          ports:
            - containerPort: 80
