networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: project1-test1
spec:
  podSelector: {}
  policyTypes:
    - Egress
